Logo transparente e mudanças no index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#">
-					<img src="images/logo.png" class="hidden-xs" alt="">
+					<img src="images/logo_transparente.png" class="hidden-xs" alt="">
 					<h3 class="visible-xs">OVTEC</h3>
 				</a>
 			</div>
@@ -125,7 +125,14 @@
 						<div class="heading">
 							<h2>Manutenção</h2>
 						</div>
-						<p>Suporte, manutenção de computadores e notebooks em geral. Formatação e instalação de sistemas, programas, antivírus, entre outros.</p>
+
+              <li>Suporte em Informatica</li>
+              <li>Manutenção de computadores</li>
+              <li>Manutenção de notebooks</li>
+              <li>Formatação</li>
+              <li>Instalação de sistemas operacionais</li>
+              <li>Consulte mais serviços</li>
+
 						<!--<a class="btn btn-1">Learn More</a> -->
 					</div>
 				</div>
@@ -134,7 +141,14 @@
 						<div class="heading">
 							<h2>Infra</h2>
 						</div>
-						<p>Instalação e manutenção de cabeamento estruturado em geral. Instalação e configuração de servidores Linux e Windows Server.</p>
+
+              <li>Projeto de cabeamento estruturado</li>
+              <li>Instalação de redes de computadores</li>
+              <li>Projeto de telefonia</li>
+              <li>Administração de servidores</li>
+              <li>Servidores Windows e Linux</li>
+              <li>Consulte mais serviços</li>
+
 						<!--<a class="btn btn-1">Learn More</a> -->
 					</div>
 				</div>
@@ -143,7 +157,14 @@
 						<div class="heading">
 							<h2>DEV</h2>
 						</div>
-						<p>Desenvolvimento de sites e sistemas por demanda. Administração de sites e redes sociais. Design gráfico conforme a necessidade do cliente.</p>
+
+              <li>Desenvolvimento de Sites</li>
+              <li>Desenvolvimento de Sistemas</li>
+              <li>Administração de sites e redes sociais</li>
+              <li>Design gráfico</li>
+              <li>Criação de cartões de visitas</li>
+              <li>Consulte mais serviços</li>
+
 						<!--<a class="btn btn-1">Learn More</a> -->
 					</div>
 				</div>
@@ -163,7 +184,7 @@
 					<div class="box-text">
 						<div class="heading">
 							<h2>Sobre</h2>
-							<span>TECNOLOGIA CONFORME A <br>SUA NECESSIDADE</span>
+							<span>TECNOLOGIA CONFORME A SUA NECESSIDADE</span>
 						</div>
 						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril.Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in.</p>
 					</div>
@@ -280,7 +301,7 @@
 				<div class="col-sm-6">
 					<div class="box-text">
 						<div class="heading">
-							<h2>Viva a Tecnologia <br> em suas mãos</h2>
+							<h2>Viva a Tecnologia em suas mãos</h2>
 							<span>INSPIRE-SE NA TECNOLOGIA</span>
 						</div>
 						<p>A tecnologia sempre fez parte da Olho Vivo Tecnologia, sempre acompanhando a evolução rápida, buscando conhecimento nos mais diversos meios tecnológicos, nos mantendo atualizados acerca das novidades lançadas diariamente pelas grandes empresas de tecnologia pelo mundo afora.</p>
@@ -297,12 +318,12 @@
 					<div class="box-text">
 						<div class="heading">
 							<h2>Redes Sociais</h2>
-							<span>Acesse nossas redes sociais <br>e mantenha-se atualizado</span>
+							<span>Curta nossas redes sociais </span>
 						</div>
             <p><b>Facebook: </b><a href="http://www.facebook.com/olhovivotecnologia">/OlhoVivoTecnologia</a></p>
-            <b></b><p>Telegram/Whatsapp/Viber: (84) 98875-0847</p>
-            <p>Skype: OlhoVivoTecnologia</p>
-						<form name="form1" method="post" action="" >
+            <p> <b> Telegram/Whatsapp/Viber: </b> (84) 98875-0847</p>
+            <p> <b> Skype: </b> OlhoVivoTecnologia </p>
+						<!--<form name="form1" method="post" action="" >
 							<div class="row">
 								<div class="col-md-8">
 									<div class="form-group">
@@ -313,7 +334,7 @@
 									<button type="submit" class="btn btn-letter" name="btnSubcribe" id="btnSubcribe">Submit</button>
 								</div>
 							</div>
-						</form>
+						</form> -->
 					</div>
 				</div>
 				<div class="col-sm-6 bg-0">
@@ -321,9 +342,9 @@
 						<div class="heading">
 							<h2>Contatos</h2>
 						</div>
-						<p><i class="fa fa-map-marker"></i> Olho Vivo Tecnologia</p>
+						<!--<p><i class="fa fa-map-marker"></i> Olho Vivo Tecnologia</p> -->
 						<p><i class="fa fa-phone"></i> (84) 98875-0847</p>
-						<p><i class="fa fa-phone"></i> Whatsapp: (84) 98875-0847</p>
+						<!-- <p><i class="fa fa-phone"></i> Whatsapp: (84) 98875-0847</p> --> 
 						<p><i class="fa fa-envelope-o"></i> olhovivotecnologia@gmail.com</p>
 						<p><i class="fa fa-clock-o"></i> 5 dias na semana das 09:00 am as 17:30 pm</p>
 						<ul class="list-inline social-link">
