--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#">
-					<img src="images/logo_transparente.png" class="hidden-xs" alt="">
+					<img src="images/logoOvtecOpaco1.jpg" class="hidden-xs" alt="">
 					<h3 class="visible-xs">OVTEC</h3>
 				</a>
 			</div>
@@ -344,7 +344,7 @@
 						</div>
 						<!--<p><i class="fa fa-map-marker"></i> Olho Vivo Tecnologia</p> -->
 						<p><i class="fa fa-phone"></i> (84) 98875-0847</p>
-						<!-- <p><i class="fa fa-phone"></i> Whatsapp: (84) 98875-0847</p> --> 
+						<!-- <p><i class="fa fa-phone"></i> Whatsapp: (84) 98875-0847</p> -->
 						<p><i class="fa fa-envelope-o"></i> olhovivotecnologia@gmail.com</p>
 						<p><i class="fa fa-clock-o"></i> 5 dias na semana das 09:00 am as 17:30 pm</p>
 						<ul class="list-inline social-link">
