Mudança no cabeçalho #eee - Logos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#">
-					<img src="images/logoOvtecOpaco1.jpg" class="hidden-xs" alt="">
+					<img src="images/logoOvtecOpaco.jpg" class="hidden-xs" alt="">
 					<h3 class="visible-xs">OVTEC</h3>
 				</a>
 			</div>
