--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	 <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Custom Theme files -->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
 
@@ -320,9 +322,9 @@
 							<h2>Redes Sociais</h2>
 							<span>Curta nossas redes sociais </span>
 						</div>
-            <p><b>Facebook: </b><a href="http://www.facebook.com/olhovivotecnologia">/OlhoVivoTecnologia</a></p>
-            <p> <b> Telegram/Whatsapp/Viber: </b> (84) 98875-0847</p>
-            <p> <b> Skype: </b> OlhoVivoTecnologia </p>
+            <p><i class="fa fa-facebook-square"></i><a href="http://www.facebook.com/olhovivotecnologia">/OlhoVivoTecnologia</a></p>
+            <p><i class="fa fa-telegram"></i><i class="fa fa-whatsapp"></i>(84) 98895-0847</p>
+            <p> <i class="fa fa-skype"></i> OlhoVivoTecnologia </p>
 						<!--<form name="form1" method="post" action="" >
 							<div class="row">
 								<div class="col-md-8">
@@ -343,10 +345,10 @@
 							<h2>Contatos</h2>
 						</div>
 						<!--<p><i class="fa fa-map-marker"></i> Olho Vivo Tecnologia</p> -->
-						<p><i class="fa fa-phone"></i> (84) 98875-0847</p>
+						<p><i class="fa fa-phone"></i> (84) 98895-0847</p>
 						<!-- <p><i class="fa fa-phone"></i> Whatsapp: (84) 98875-0847</p> -->
 						<p><i class="fa fa-envelope-o"></i> olhovivotecnologia@gmail.com</p>
-						<p><i class="fa fa-clock-o"></i> 5 dias na semana das 09:00 am as 17:30 pm</p>
+						<p><i class="fa fa-clock-o"></i> 5 dias na semana das 09:00 am as 17:00 pm</p>
 						<ul class="list-inline social-link">
 							<li><a href="http://www.facebook.com/olhovivotecnologia"><i class="fa fa-facebook"></i></a></li>
 							<li><a href=""><i class="fa fa-twitter"></i></a></li>
