--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://www.facebook.com/olhovivotecnologia"><i class="fa fa-facebook"></i></a></li>
+            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+            <li><a href=""><i class="fa fa-google-plus"></i></a></li>
           <li>
             <a class="page-scroll" href="index.html">
               <!--Home-->
@@ -389,7 +392,7 @@
             <p>A Olho Vivo Tecnologia agradece a sua visita, esperamos que a visita tenha sido satisfatória e que possamos um dia vos ter como nosso cliente. A nossa meta é a satisfação do cliente, atendendo e cumprindo com o SLA com bastante rapidez, sem
               deixar de prezar pela qualidade e pela confiabilidade ao seu atendimento.</p>
             <br>
-            <p>Todos os Direitos Reservados @ OVTEC - <a href="http://www.olhovivotecnologia.com.br" target="_blank" rel="nofollow">Olho Vivo Tecnologia</a> Desenvolvido por Gustavo Paulino Xavier</p>
+            <p>Todos os Direitos Reservados<sup>®</sup> OVTEC - <a href="http://www.olhovivotecnologia.com.br" target="_blank" rel="nofollow">Olho Vivo Tecnologia</a> Desenvolvido por Gustavo Paulino Xavier</p>
           </div>
         </div>
         <!--				<div class="col-md-3">
