--- a/index.html
+++ b/index.html
@@ -389,8 +389,7 @@
             <div class="footer-heading">
               <h2>OVTEC</h2>
             </div>
-            <p>A Olho Vivo Tecnologia agradece a sua visita, esperamos que a visita tenha sido satisfatória e que possamos um dia vos ter como nosso cliente. A nossa meta é a satisfação do cliente, atendendo e cumprindo com o SLA com bastante rapidez, sem
-              deixar de prezar pela qualidade e pela confiabilidade ao seu atendimento.</p>
+            <p>A Olho Vivo Tecnologia agradece a sua visita, esperamos que a visita tenha sido satisfatória e que possamos um dia vos ter como nosso cliente. A nossa meta é a satisfação do cliente, atendendo e cumprindo com o Acordo de Nível de Serviço (SLA), sem deixar de prezar pela qualidade e pela confiabilidade no seu atendimento.</p>
             <br>
             <p>Todos os Direitos Reservados<sup>®</sup> OVTEC - <a href="http://www.olhovivotecnologia.com.br" target="_blank" rel="nofollow">Olho Vivo Tecnologia</a> Desenvolvido por Gustavo Paulino Xavier</p>
           </div>
