Mudança no box-content

--- a/index.html
+++ b/index.html
@@ -192,19 +192,17 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="box-text">
-            <div class="heading">
-              <h2>Sobre</h2>
-              <span>Valores</span>
-            </div>
-            <p>Somos uma empresa jovem, no entanto possuímos um quadro de colaboradores com uma vasta experiência no mercado de trabalho. Todos os nossos colaboradores são qualificados e tem mais de 10 anos de experiência na área de Tecnologia da Informação
-              (TI).</p>
-            <li><n class="negrito">Integridade:</n> Os colaboradores da Olho Vivo Tecnologia mantêm uma conduta ética preservando a confiança dos usuários nos serviços prestados;</li>
-            <li><n class="negrito">Satisfação dos clientes:</n> A Olho Vivo Tecnologia se preocupa em atender as demandas e necessidades dos seus clientes com eficiência, gerando nos mesmos um sentimento de confiança e participação;</li>
-            <li><n class="negrito">Atualização constante:</n> A Olho Vivo Tecnologia preza pela atualização constante dos seus colaboradores, mantendo um ambiente favorável para que isso aconteça. Gestão e processos são mantidos atualizados, possibilitando a evolução com os segmentos em que atua;</li>
-            <li><n class="negrito">Profissionalismo:</n> Trabalhar com profissionalismo significa ter comprometimento e responsabilidade;</li>
-            <li><n class="negrito">Envolvimento:</n> Os colaboradores reconhecem a importância e o impacto de suas tarefas na realidade dos nossos clientes, dedicando-se integralmente ao desenvolvimento de suas atividades.</li>
-          </div>
+            <div class="box-text">
+                <div class="heading">
+                  <h2>Viva a Tecnologia em suas mãos</h2>
+                  <span>Missão</span>
+                </div>
+                <p>"Prover serviços de TI que apóiem os nossos clientes a cumprir sua missão de desenvolver os seus serviços e as suas necessidades."</p>
+                <div class="heading">
+                  <span>Visão</span>
+                </div>
+                <p>"Ser um prestador de serviços de TI com qualidade reconhecida por seus usuários."</p>
+            </div>          
         </div>
       </div>
       <div class="clear"></div>
@@ -316,17 +314,18 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="box-text">
-            <div class="heading">
-              <h2>Viva a Tecnologia em suas mãos</h2>
-              <span>Missão</span>
-            </div>
-            <p>"Prover serviços de TI que apóiem os nossos clientes a cumprir sua missão de desenvolver os seus serviços e as suas necessidades."</p>
-            <div class="heading">
-              <span>Visão</span>
-            </div>
-            <p>"Ser um prestador de serviços de TI com qualidade reconhecida por seus usuários."</p>
-          </div>
+            <div class="box-text">
+                <div class="heading">
+                  <h2>Valores</h2>                  
+                </div>
+                <p>Somos uma empresa jovem, no entanto possuímos um quadro de colaboradores com uma vasta experiência no mercado de trabalho. Todos os nossos colaboradores são qualificados e tem mais de 10 anos de experiência na área de Tecnologia da Informação
+                  (TI).</p>
+                <li><n class="negrito">Integridade:</n> Os colaboradores da Olho Vivo Tecnologia mantêm uma conduta ética preservando a confiança dos usuários nos serviços prestados;</li>
+                <li><n class="negrito">Satisfação dos clientes:</n> A Olho Vivo Tecnologia se preocupa em atender as demandas e necessidades dos seus clientes com eficiência, gerando nos mesmos um sentimento de confiança e participação;</li>
+                <li><n class="negrito">Atualização constante:</n> A Olho Vivo Tecnologia preza pela atualização constante dos seus colaboradores, mantendo um ambiente favorável para que isso aconteça. Gestão e processos são mantidos atualizados, possibilitando a evolução com os segmentos em que atua;</li>
+                <li><n class="negrito">Profissionalismo:</n> Trabalhar com profissionalismo significa ter comprometimento e responsabilidade;</li>
+                <li><n class="negrito">Envolvimento:</n> Os colaboradores reconhecem a importância e o impacto de suas tarefas na realidade dos nossos clientes, dedicando-se integralmente ao desenvolvimento de suas atividades.</li>
+            </div>          
         </div>
       </div>
       <div class="clear"></div>
