Ícones e adaptações textuais

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
               <h2>Manutenção</h2>
             </div>
 
-            <li>Suporte em Informatica</li>
-            <li>Manutenção de computadores</li>
-            <li>Manutenção de notebooks</li>
-            <li>Formatação</li>
-            <li>Instalação de sistemas operacionais</li>
-            <li>Consulte mais serviços</li>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Suporte em Informática <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Manutenção de Computadores <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Manutenção de Notebooks <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Formatação de Computador <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Limpeza de Vírus Limpeza de Vírus <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Consulte demais serviços <br>
 
             <!--<a class="btn btn-1">Learn More</a> -->
           </div>
@@ -153,12 +153,12 @@
               <h2>Infra</h2>
             </div>
 
-            <li>Projeto de cabeamento estruturado</li>
-            <li>Instalação de redes de computadores</li>
-            <li>Projeto de telefonia</li>
-            <li>Administração de servidores</li>
-            <li>Servidores Windows e Linux</li>
-            <li>Consulte mais serviços</li>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Projeto de Cabeamento Estruturado <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Soluções em Redes de Computadores <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Telefonia e Central Telefônica <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Administração de Servidores <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Servidores Linux e Windows <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Consulte demais serviços <br>
 
             <!--<a class="btn btn-1">Learn More</a> -->
           </div>
@@ -169,12 +169,12 @@
               <h2>DEV</h2>
             </div>
 
-            <li>Desenvolvimento de Sites</li>
-            <li>Desenvolvimento de Sistemas</li>
-            <li>Administração de sites e redes sociais</li>
-            <li>Design gráfico</li>
-            <li>Criação de cartões de visitas</li>
-            <li>Consulte mais serviços</li>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Desenvolvimento de Sites <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Desenvolvimento de Sistemas <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Administração de Sites e Redes Sociais <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Design e Artes Gráficas <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Criação de Cartões de Visitas <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Consulte demais serviços <br>
 
             <!--<a class="btn btn-1">Learn More</a> -->
           </div>
@@ -194,8 +194,11 @@
         <div class="col-sm-6">
             <div class="box-text">
                 <div class="heading">
-                  <h2>Viva a Tecnologia em suas mãos</h2>
-                  <span>Missão</span>
+                  <h2>A Tecnologia em suas mãos</h2>                  
+                </div>
+                Somos uma empresa jovem, no entanto possuímos um quadro de colaboradores com uma vasta experiência no mercado de trabalho. Todos os nossos colaboradores são qualificados e tem mais de 10 anos de experiência na área de Tecnologia da Informação (TI). <br><br>
+                <div class="heading">
+                    <span>Missão</span>
                 </div>
                 <p>"Prover serviços de TI que apóiem os nossos clientes a cumprir sua missão de desenvolver os seus serviços e as suas necessidades."</p>
                 <div class="heading">
@@ -317,11 +320,9 @@
             <div class="box-text">
                 <div class="heading">
                   <h2>Valores</h2>                  
-                </div>
-                <p>Somos uma empresa jovem, no entanto possuímos um quadro de colaboradores com uma vasta experiência no mercado de trabalho. Todos os nossos colaboradores são qualificados e tem mais de 10 anos de experiência na área de Tecnologia da Informação
-                  (TI).</p>
+                </div>                
                 <li><n class="negrito">Integridade:</n> Os colaboradores da Olho Vivo Tecnologia mantêm uma conduta ética preservando a confiança dos usuários nos serviços prestados;</li>
-                <li><n class="negrito">Satisfação dos clientes:</n> A Olho Vivo Tecnologia se preocupa em atender as demandas e necessidades dos seus clientes com eficiência, gerando nos mesmos um sentimento de confiança e participação;</li>
+                <li><n class="negrito">Satisfação dos clientes:</n> A nossa empresa se preocupa em atender as demandas e necessidades dos seus clientes com eficiência, gerando nos mesmos um sentimento de confiança e participação;</li>
                 <li><n class="negrito">Atualização constante:</n> A Olho Vivo Tecnologia preza pela atualização constante dos seus colaboradores, mantendo um ambiente favorável para que isso aconteça. Gestão e processos são mantidos atualizados, possibilitando a evolução com os segmentos em que atua;</li>
                 <li><n class="negrito">Profissionalismo:</n> Trabalhar com profissionalismo significa ter comprometimento e responsabilidade;</li>
                 <li><n class="negrito">Envolvimento:</n> Os colaboradores reconhecem a importância e o impacto de suas tarefas na realidade dos nossos clientes, dedicando-se integralmente ao desenvolvimento de suas atividades.</li>
