--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <i class="fa fa-hashtag" aria-hidden="true"></i> Manutenção de Computadores <br>
             <i class="fa fa-hashtag" aria-hidden="true"></i> Manutenção de Notebooks <br>
             <i class="fa fa-hashtag" aria-hidden="true"></i> Formatação de Computador <br>
-            <i class="fa fa-hashtag" aria-hidden="true"></i> Limpeza de Vírus Limpeza de Vírus <br>
+            <i class="fa fa-hashtag" aria-hidden="true"></i> Limpeza de Vírus <br>
             <i class="fa fa-hashtag" aria-hidden="true"></i> Consulte demais serviços <br>
 
             <!--<a class="btn btn-1">Learn More</a> -->
@@ -196,7 +196,7 @@
                 <div class="heading">
                   <h2>A Tecnologia em suas mãos</h2>                  
                 </div>
-                Somos uma empresa jovem, no entanto possuímos um quadro de colaboradores com uma vasta experiência no mercado de trabalho. Todos os nossos colaboradores são qualificados e tem mais de 10 anos de experiência na área de Tecnologia da Informação (TI). <br><br>
+                Somos uma empresa jovem, possuímos um quadro de colaboradores com uma vasta experiência no mercado de trabalho, atuando há mais de 10 anos na área de Tecnologia da Informação (TI). Conheça mais sobre nós, nossos objetivos e diferenciais. <br><br>
                 <div class="heading">
                     <span>Missão</span>
                 </div>
@@ -322,7 +322,7 @@
                   <h2>Valores</h2>                  
                 </div>                
                 <li><n class="negrito">Integridade:</n> Os colaboradores da Olho Vivo Tecnologia mantêm uma conduta ética preservando a confiança dos usuários nos serviços prestados;</li>
-                <li><n class="negrito">Satisfação dos clientes:</n> A nossa empresa se preocupa em atender as demandas e necessidades dos seus clientes com eficiência, gerando nos mesmos um sentimento de confiança e participação;</li>
+                <li><n class="negrito">Satisfação dos clientes:</n> A Olho Vivo Tecnologia se preocupa em atender as demandas e necessidades dos seus clientes com eficiência, gerando nos mesmos um sentimento de confiança e participação;</li>
                 <li><n class="negrito">Atualização constante:</n> A Olho Vivo Tecnologia preza pela atualização constante dos seus colaboradores, mantendo um ambiente favorável para que isso aconteça. Gestão e processos são mantidos atualizados, possibilitando a evolução com os segmentos em que atua;</li>
                 <li><n class="negrito">Profissionalismo:</n> Trabalhar com profissionalismo significa ter comprometimento e responsabilidade;</li>
                 <li><n class="negrito">Envolvimento:</n> Os colaboradores reconhecem a importância e o impacto de suas tarefas na realidade dos nossos clientes, dedicando-se integralmente ao desenvolvimento de suas atividades.</li>
@@ -341,7 +341,7 @@
               <h2>Redes Sociais</h2>
               <span>Curta nossas redes sociais </span>
             </div>
-            <p><i class="fa fa-facebook-square"></i><a href="http://www.facebook.com/olhovivotecnologia">/OlhoVivoTecnologia</a></p>
+            <p><i class="fa fa-facebook-square"></i><a href="http://www.facebook.com/olhovivotecnologia">@OlhoVivoTecnologia</a></p>
             <p><i class="fa fa-telegram"></i><i class="fa fa-whatsapp"></i>(84) 99611-1959</p>
             <p> <i class="fa fa-skype"></i> OlhoVivoTecnologia </p>
             <!--<form name="form1" method="post" action="" >
