--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="heading">
                   <h2>A Tecnologia em suas mãos</h2>                  
                 </div>
-                Somos uma empresa jovem, possuímos um quadro de colaboradores com uma vasta experiência no mercado de trabalho, atuando há mais de 10 anos na área de Tecnologia da Informação (TI). Conheça mais sobre nós, nossos objetivos e diferenciais. <br><br>
+                Somos uma empresa jovem, possuímos um quadro de colaboradores com uma vasta experiência, atuando há mais de 10 anos nas diversas áreas da Tecnologia da Informação (TI). Conheça mais sobre nós, nossos objetivos e diferenciais. <br><br>
                 <div class="heading">
                     <span>Missão</span>
                 </div>
@@ -321,7 +321,7 @@
                 <div class="heading">
                   <h2>Valores</h2>                  
                 </div>                
-                <li><n class="negrito">Integridade:</n> Os colaboradores da Olho Vivo Tecnologia mantêm uma conduta ética preservando a confiança dos usuários nos serviços prestados;</li>
+                <li><n class="negrito">Integridade:</n> A Olho Vivo Tecnologia mantêm uma conduta ética preservando a confiança dos usuários nos serviços prestados;</li>
                 <li><n class="negrito">Satisfação dos clientes:</n> A Olho Vivo Tecnologia se preocupa em atender as demandas e necessidades dos seus clientes com eficiência, gerando nos mesmos um sentimento de confiança e participação;</li>
                 <li><n class="negrito">Atualização constante:</n> A Olho Vivo Tecnologia preza pela atualização constante dos seus colaboradores, mantendo um ambiente favorável para que isso aconteça. Gestão e processos são mantidos atualizados, possibilitando a evolução com os segmentos em que atua;</li>
                 <li><n class="negrito">Profissionalismo:</n> Trabalhar com profissionalismo significa ter comprometimento e responsabilidade;</li>
