Atualizações - os: 04/2018 - Remoção do rodapé

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <p><i class="fa fa-clock-o"></i> 5 dias na semana das 09:00 am as 17:00 pm</p>
             <ul class="list-inline social-link">
               <li><a href="http://www.facebook.com/olhovivotecnologia"><i class="fa fa-facebook"></i></a></li>
-              <li><a href=""><i class="fa fa-twitter"></i></a></li>
+              <li><a href="http://www.twitter.com/olhovivotec"><i class="fa fa-twitter"></i></a></li>
               <li><a href=""><i class="fa fa-google-plus"></i></a></li>
             </ul>
           </div>
@@ -389,9 +389,9 @@
             <div class="footer-heading">
               <h2>OVTEC</h2>
             </div>
-            <p>A Olho Vivo Tecnologia agradece a sua visita, esperamos que a visita tenha sido satisfatória e que possamos um dia vos ter como nosso cliente. A nossa meta é a satisfação do cliente, atendendo e cumprindo com o Acordo de Nível de Serviço (SLA), sem deixar de prezar pela qualidade e pela confiabilidade no seu atendimento.</p>
-            <br>
-            <p>Todos os Direitos Reservados<sup>®</sup> OVTEC - <a href="http://www.olhovivotecnologia.com.br" target="_blank" rel="nofollow">Olho Vivo Tecnologia</a> Desenvolvido por Gustavo Paulino Xavier</p>
+            <!-- <p>A Olho Vivo Tecnologia agradece a sua visita, esperamos que a visita tenha sido satisfatória e que possamos um dia vos ter como nosso cliente. A nossa meta é a satisfação do cliente, atendendo e cumprindo com o Acordo de Nível de Serviço (SLA), sem deixar de prezar pela qualidade e pela confiabilidade no seu atendimento.</p>
+            <br> -->
+            <p>Todos os Direitos Reservados<sup>®</sup> OVTEC - <a href="http://www.olhovivotecnologia.com.br" target="_blank" rel="nofollow">Olho Vivo Tecnologia.</a> Desenvolvido por Gustavo Paulino Xavier</p>
           </div>
         </div>
         <!--				<div class="col-md-3">
