--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               <span>Curta nossas redes sociais </span>
             </div>
             <p><i class="fa fa-facebook-square"></i><a href="http://www.facebook.com/olhovivotecnologia">@OlhoVivoTecnologia</a></p>
-            <p><i class="fa fa-telegram"></i><i class="fa fa-whatsapp"></i>(84) 99611-1959</p>
+            <p><i class="fa fa-telegram"></i><i class="fa fa-whatsapp"></i>(84) 99447-0336</p>
             <p> <i class="fa fa-skype"></i> OlhoVivoTecnologia </p>
             <!--<form name="form1" method="post" action="" >
 							<div class="row">
@@ -374,7 +374,8 @@
               <h2>Contatos</h2>
             </div>
             <!--<p><i class="fa fa-map-marker"></i> Olho Vivo Tecnologia</p> -->
-            <p><i class="fa fa-phone"></i> (84) 99611-1959</p>
+            <p><i class="fa fa-phone"></i> (84) 99447-0336</p>
+	    <!-- <p><i class="fa fa-phone"></i> (84) 99611-1959</p> -->
             <!-- <p><i class="fa fa-phone"></i> Whatsapp: (84) 98875-0847</p> -->
             <p><i class="fa fa-envelope-o"></i> olhovivotecnologia@gmail.com</p>
             <p><i class="fa fa-clock-o"></i> 5 dias na semana das 09:00 am as 17:00 pm</p>
